<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" android:layout_height="match_parent" android:layout_width="match_parent">

    <Button
        android:id="@+id/simple_calculator_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:onClick="openSimpleCalculatorActivity"
        android:padding="10dp"
        android:text="@string/kalkulator_prosty"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/advanced_calculator_button"
        app:layout_constraintEnd_toEndOf="@+id/advanced_calculator_button"
        app:layout_constraintStart_toStartOf="@+id/advanced_calculator_button" />

    <Button
        android:id="@+id/advanced_calculator_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openAdvancedCalculatorActivity"
        android:padding="10dp"
        android:text="@string/kalkulator_zaawansowany"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/author_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="openAuthorActivity"
        android:padding="10dp"
        android:text="@string/o_aplikacji"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/advanced_calculator_button"
        app:layout_constraintStart_toStartOf="@+id/advanced_calculator_button"
        app:layout_constraintTop_toBottomOf="@+id/advanced_calculator_button" />
</androidx.constraintlayout.widget.ConstraintLayout>